fix: setup ktlint-cli in build.gradle.kts